<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/baby_blue"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:itemIconSize="25dp"
        app:itemHorizontalTranslationEnabled="false"
        app:itemPaddingBottom="10dp"
        android:theme="@style/Theme.SmishingDetectionApp"
        app:menu="@menu/activity_main_drawer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">

        <ImageView
            android:id="@+id/HardhatLogo"
            android:layout_width="112dp"
            android:layout_height="106dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hardhat_logo"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/DashboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HardhatLogo"
            android:textColor="@color/navy_blue" />

        <TextView
            android:id="@+id/information_box"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buttons_rounded"
            app:layout_constraintTop_toBottomOf="@id/DashboardText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/information_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="Information"
            app:layout_constraintStart_toStartOf="@+id/information_box"
            app:layout_constraintTop_toTopOf="@+id/information_box" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="@+id/information_box"
            app:layout_constraintTop_toTopOf="@+id/information_box"
            app:srcCompat="@drawable/icon_information"
            android:contentDescription="@string/info_icon" />

        <TextView
            android:id="@+id/new_detections"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/counter_buttons"
            app:layout_constraintTop_toBottomOf="@+id/information_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/total_detections" />

        <TextView
            android:id="@+id/total_detections"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/counter_buttons"
            app:layout_constraintTop_toBottomOf="@+id/information_box"
            app:layout_constraintStart_toEndOf="@+id/new_detections"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/new_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@+id/new_detections"
            app:layout_constraintTop_toTopOf="@+id/new_detections" />

        <TextView
            android:id="@+id/total_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@+id/total_detections"
            app:layout_constraintTop_toTopOf="@+id/total_detections" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/new_detectionsTxt"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/new_detections"
            app:layout_constraintStart_toStartOf="@+id/new_detections" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/total_detectionsTxt"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_detections"
            app:layout_constraintStart_toStartOf="@+id/total_detections" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="@+id/total_detections"
            app:layout_constraintTop_toTopOf="@+id/total_detections"
            app:srcCompat="@drawable/baseline_access_time_24"
            android:contentDescription="@string/time_icon" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="@+id/new_detections"
            app:layout_constraintTop_toTopOf="@+id/new_detections"
            app:srcCompat="@drawable/new_5_svg"
            android:contentDescription="@string/new_icon" />

        <Button
            android:id="@+id/detections_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buttons_rounded"
            android:text="@string/detectionsBtn"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/total_detections"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/learn_more_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buttons_rounded"
            android:text="Learn More About Smishing"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/detections_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/debug_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Debug"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/radar_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/radar_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buttons_rounded"
            android:text="Live Smishing Radar"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/learn_more_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
